# MSc-Group-Project

./: .gitignore  LICENSE  README.md  installation.py  main.py  plan.txt  pyproject.toml
AF-Desktop-Predictions/: electron-builder.yml  package-lock.json  package.json  tailwind.config.js
AF-Desktop-Predictions/src/main/: index.js
AF-Desktop-Predictions/src/renderer/: index.html
AF-Desktop-Predictions/src/renderer/src/: Api.js  App.jsx
AF-Desktop-Predictions/src/renderer/src/assets/: base.css
AF-Desktop-Predictions/src/renderer/src/components/: QueryInput.jsx  QueuedPredictions.jsx
AF-Predictions/: package-lock.json  package.json
AF-Predictions/src/: App.jsx  index.css
AF-Predictions/src/components/: QueryInput.jsx  RunningJobs.jsx
localfold/: cli.py  server-config.ini
localfold/predictions/: predict.py
localfold/server/: celery_startup.sh  django_startup.sh
localfold/server/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py
localfold/server/predict/: live.py  live_routing.py  models.py  tasks.py
setup/: __init__.py  installations.py  user_interaction.py
src/: celery_startup.sh  helpers.py  manage.py  requirements.txt
src/af/: db.sqlite3
src/af/core/: asgi.py  settings.py  urls.py  wsgi.py
src/af/predict/: live.py  models.py  tasks.py  urls.py  views.py
src/af/predict/migrations/: 0001_initial.py
src/af/predict/predictions/: predict.py
src/af/render/: dash_app.py  urls.py  views.py
src/af/render/templates/: template.html
src/analysis/: base.py
src/model/: __init__.py
src/model_input/: __init__.py
src/predictions/: predict.py
src/server/: app.py  config.py  tasks.py
ssh/: main.py
ui/: dev-app-update.yml  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json  tailwind.config.js
ui/src/main/: index.js
ui/src/renderer/: index.html
ui/src/renderer/src/: Api.js  App.jsx  main.jsx
ui/src/renderer/src/components/: QueuedPredictions.jsx  Setup.jsx  TaskCard.jsx
