[tool.poetry]
name = "group-project"
version = "0.1.0"
description = ""
authors = ["Aradhya Tripathi <67282231+Aradhya-Tripathi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
colabfold = {git = "git@github.com:sokrypton/ColabFold.git", rev = "main", extras = ["alphafold"]}
requests = "^2.31.0"
redis = "^5.0.3"
celery = "^5.3.6"
django = "^5.0.3"
djangorestframework = "^3.15.0"
django-cors-headers = "^4.3.1"
channels = "^4.0.0"
daphne = "^4.1.0"
channels-redis = "^4.2.0"


[tool.poetry.group.dev.dependencies]
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
