[tool.poetry]
name = "localfold"
version = "0.1.0"
description = ""
authors = ["Aradhya Tripathi <67282231+Aradhya-Tripathi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
redis = "^5.0.3"
celery = "^5.3.6"
django = "^5.0.3"
djangorestframework = "^3.15.0"
django-cors-headers = "^4.3.1"
channels = "^4.0.0"
daphne = "^4.1.0"
channels-redis = "^4.2.0"
colabfold = {git = "https://github.com/sokrypton/ColabFold.git", branch = "main", extras = ["alphafold"]}

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

